refactor: improve `UpdaterService` with code cleanup and modern stream operations
Standardized formatting, replaced deprecated methods with `.toList()`, and ensured thread-safety with `final` modifier for `currentlyRunningUpdates`. Simplified method chaining by replacing redundant conditions for better maintainability.